--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.17.7",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-watch": "^5.0.1",
     "jest": "^26.0.1",
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "gulp": "^4.0.2",
-    "mjml": "^4.12.0"
+    "mjml": "^4.12.0",
+    "mjml-core": "^4.12.0",
+    "mjml-validator": "^4.12.0"
   }
 }
